ui: fix card title font color on dark mode should be bright

--- a/asset/revamp/styles/scss/components/_content-darkmode.scss
+++ b/asset/revamp/styles/scss/components/_content-darkmode.scss
@@ -50,6 +50,9 @@
           }
         }
 
+        .my-card-title{
+          color: $white;
+        }
         .my-btn {
           &:hover {
             box-shadow: none;
